--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,9 +1,9 @@
 {
-  "builds": [
-    { "src": "app.py", "use": "@vercel/python" }
-  ],
-  "routes": [
-    { "src": "/api/(.*)", "dest": "app.py" },
-    { "src": "/(.*)", "dest": "/frontend/$1" }
+  "version": 2,
+  "buildCommand": "",
+  "installCommand": "pip install -r requirements.txt",
+  "outputDirectory": ".",
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
   ]
 }
